Add cameras index switch button (from front to back camera)

--- a/app/src/main/res/layout/show_camera.xml
+++ b/app/src/main/res/layout/show_camera.xml
@@ -4,12 +4,18 @@
     xmlns:opencv="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/switchCamerasButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Switch cameras" />
+
     <org.opencv.android.JavaCameraView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:visibility="gone"
         android:id="@+id/show_camera_activity_java_surface_view"
         opencv:show_fps="true"
-        opencv:camera_id="any" />
+        opencv:camera_id="front" />
 
 </LinearLayout>
