--- a/app/src/main/res/layout/show_camera.xml
+++ b/app/src/main/res/layout/show_camera.xml
@@ -10,6 +10,32 @@
         android:layout_height="wrap_content"
         android:text="Switch cameras" />
 
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_weight="7"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBarTreshold"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text=""
+            android:layout_weight="3"
+            android:id="@+id/textViewTreshold"
+            android:textAlignment="center" />
+
+    </LinearLayout>
+
     <org.opencv.android.JavaCameraView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
